--- a/style.css
+++ b/style.css
@@ -10,8 +10,8 @@ body {
 
 .blue-bg {
     background-color: #1F2937;
-    padding-left: 200px;
-    padding-right: 200px;
+    padding-left: 15%;
+    padding-right: 15%;
 }
 
 .header {
@@ -107,4 +107,34 @@ body {
     text-align: center;
     color: #5c5c5c;
     font-size: 14px;
+}
+
+
+.quote-box {
+    height: 23em;
+    background-color: #e5e7eb;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: .5em;
+}
+
+.quote-text {
+    text-align: left;
+    width: 50%;
+    font-size: 40px;
+    font-style: italic;
+    font-weight: 100;
+    color: #1f2937;
+    margin: 0;
+}
+
+.quote-name {
+    text-align: right;
+    width: 50%;
+    padding-right: 1em;
+    font-size: 30px;
+    font-weight: 700;
+    margin: 0em;
 }
