--- a/style.css
+++ b/style.css
@@ -138,3 +138,44 @@ body {
     font-weight: 700;
     margin: 0em;
 }
+
+
+.action-box {
+    background-color: #3882f6;
+    display: flex;
+    gap: 3em;
+    height: 8em;
+    justify-content: space-evenly;
+    align-items: center;
+    margin: 5em 18%;
+    border-radius: .5em;
+}
+
+.action-text > :nth-child(1) {
+    font-size: 20px;
+    color: #f5f5f5;
+    font-weight: 550;
+}
+
+.action-text > :nth-child(2) {
+    font-size: 15px;
+    color: #d1d1d1;
+}
+
+.action-button {
+    display: flex;
+    margin: 0;
+    padding: 0;
+    color: rgb(255, 255, 255);
+    font-size: 15px;
+    text-decoration: none;
+    width: 8em;
+    height: 3em;
+    
+    border-radius: 1em;
+    border: 3px solid #ffffff;
+    background-color: #3882f6;
+    justify-content: center;
+    align-items: center;
+    
+}
