--- a/style.css
+++ b/style.css
@@ -177,5 +177,15 @@ body {
     background-color: #3882f6;
     justify-content: center;
     align-items: center;
-    
+}
+
+footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #1F2937;
+    height: 6em;
+    color: rgb(233, 233, 233);
+    font-size: 17px;
+    font-weight: 600;
 }
