--- a/style.css
+++ b/style.css
@@ -19,14 +19,14 @@ body {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    gap: 8px;
+    gap: 40px;
     height: 5em;
 }
 
-.header div {
-    color: red;
+.header a {
     font-size: 18px;
     color: #e5e7eb;
+    text-decoration: none;
 }
 
 .header .logo-text {
